tests/NormalTests/paczka1/fuzzy1/29936258.err
Error in line 9: A840 A840 7,0
Error in line 11: A840 S841 29,9
Error in line 13: A840 S8P9 77,1
Error in line 15: ekiD5te S859 18,9
Error in line 18: aZpXYN S841 24,7
Error in line 21: RAfDoH8 A119 150,1
Error in line 29: BZhY S859 8,0
Error in line 12: A840 S859 30,1
Error in line 34: BZhY A119 73,2
Error in line 37: aZpXYN A840 31,4
